[tool.poetry]
name = "state_manager"
version = "0.1.0"
description = "State Manager for OT3"
license = "Apache-2.0"
repository = "https://github.com/Opentrons/ot3-firmware"
authors = ["Opentrons <engineering@opentrons.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"
pytest-cov = "2.10.1"
pytest-xdist = "~2.2.1"
pytest-asyncio = "~=0.18"
mypy = "0.981"
flake8 = "~4.0.1"
flake8-annotations = "~2.7.0"
flake8-docstrings = "~1.6.0"
flake8-noqa = "~1.2.1"
black = "22.3.0"
isort = "5.10.1"
mdformat-gfm = "^0.3.5"
mdformat_frontmatter = "^0.4.1"
mdformat_footnote = "^0.1.1"

# Expects the monorepo (opentrons) to be a sibling of this repo
opentrons = { path = "../../opentrons/api", develop = true}
opentrons-shared-data = { path = "../../opentrons/shared-data/python", develop = true }
header_generation_utils = { path = "../header_generation_utils", develop = true}

[tool.poetry.scripts]
generate-headers = 'generate_state_manager_headers:main'

[tool.pytest.ini_options]
addopts = "--color=yes"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true
show_error_codes = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
